# jetblack-tomlutils

./: .gitignore  README.md  pyproject.toml
jetblack_tomlutils/: toml_json.py
